@@ -15,3 +15,4 @@
 *.plg
 *.bak
 *.map
+*.gch
