@@ -12,6 +12,8 @@ TARGET_APPTYPE = windows
 
 TARGET_NAME = taskmgr
 
+TARGET_PCH = precomp.h
+
 TARGET_CFLAGS = -Werror -Wall -DDBG -D_WIN32_IE=0x0501 -D_WIN32_WINNT=0x0501 -D__USE_W32API 
 	
 TARGET_SDKLIBS = ntdll.a kernel32.a user32.a gdi32.a comctl32.a
